<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunStat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="strLat">00,00</string>
    <string name="strLong">00,00</string>
    <string name="strLocationLabel">Location:</string>
    <string name="strRefreshLocation">Refresh</string>
    <string name="strStepsLabel">Steps:</string>
    <string name="strSteps">0</string>
    <string name="strRefreshSteps">Refresh</string>
    <string name="strLogLabel">Log:</string>

</resources>
